# pidesfire-contract

./: CMakeLists.txt  contract.h  sha256_impl.h  test_vectors.h
docs/: contract.md
tests/: test_contract.cpp
